# azure-python-stuff

./: README.md  pyproject.toml  requirements.txt  to-be-removed.parquet
az-blobs/: datalake.py  list_blobs.py  runner.py
