[tool.poetry]
name = "azure-python-stuff"
version = "0.1.0"
description = ""
authors = ["bossruji <en.rujikorn@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pyarrow = "^19.0.0"
azure-functions = "^1.21.3"
azure-storage-blob = "^12.24.0"
pandas = "^2.2.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
